@@ -1,3 +1,4 @@
+* #5053: Reduce white space around boxes (morgs)
 * #6621: set entry sensitive not editable (morgs)
 * Add license to activity.py (morgs)
 * #6743: border around gtk.entry (morgs)
